# django-in-production

./: README.md
ch01/: README.md
ch01/helloworld/: docker-compose.yaml  pyproject.toml
ch02/: README.md
ch02/myblog/: docker-compose.yaml  pyproject.toml
ch02/myblog/backend/author/: admin.py  models.py
ch02/myblog/backend/author/migrations/: 0001_initial.py  0002_author_created_at_author_updated_at.py  0003_blogauthor_author_demo_field.py
ch02/myblog/backend/blog/: admin.py  models.py  urls.py  views.py
ch02/myblog/backend/blog/migrations/: 0001_initial.py  0002_alter_blog_author_coverimage.py  0003_coverimage_created_at_coverimage_updated_at.py  0004_demomodel.py
ch02/myblog/backend/config/: settings.py
ch02/myblog/backend/helper/: db_debug.py
ch02/myblog/backend/helper/management/commands/: create_dummy_data.py  done_query.py
ch03/: README.md
ch03/myblog/: docker-compose.yaml  pyproject.toml
ch04/: README.md
ch04/myblog/: pyproject.toml
ch05/: README.md
ch05-ex01-token-base-login/: README.md
ch05-ex01-token-base-login-advanced/: README.md
ch05-ex01-token-base-login-advanced/myblog/: pyproject.toml
ch05-ex01-token-base-login/myblog/: Dockerfile  docker-compose.yaml
ch05-ex01-token-base-login/myblog/backend/: Dockerfile  (+1 more)
ch05-ex02-social-login/: README.md
ch05-ex02-social-login/myblog/: docker-compose.yaml  pyproject.toml
ch05/myblog/: pyproject.toml
ch06/: README.md
ch06/myblog/: docker-compose.yaml  pyproject.toml
ch07/: README.md
ch07-ex01-pagenator/: README.md
ch07/myblog/: docker-compose.yaml  pyproject.toml
(+76 files in other folders)
