[project]
name = "django-in-production-02"
version = "0.1.0"
description = "django-in-production 2章の写経"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.1.5",
    "psycopg2-binary==2.9.10",
    "djangorestframework==3.15.2",
]

[tool.uv]
link-mode = "copy"
dev-dependencies = [
    "ruff==0.9.2",
    "pytest==8.3.4",
    "pytest-django==4.9.0",
]
